@@ -1,6 +1,11 @@
 # ChangeLog for net-libs/rb_libtorrent
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  14 Mar 2010; A. Vinogradov <spamslepnoga@inbox.ru>
+  rb_libtorrent-0.15_rc4115.ebuild, rb_libtorrent-0.15.9999.ebuild,
+  rb_libtorrent-9999.ebuild:
+  rename use python-bindings to python - sync witch upstream
 
   18 Dec 2009; A. Vinogradov <spamslepnoga@inbox.ru>
   rb_libtorrent-9999.ebuild:
